[package]
name = "stride"
version = "0.1.0"
authors = ["Ross MacArthur <ross@macarthur.io>"]
edition = "2018"
description = "A strided slice type"
readme = "README.md"
repository = "https://github.com/rossmacarthur/stride"
license = "MIT OR Apache-2.0"
keywords = ["stride", "slice", "memory"]
categories = ["data-structures", "no-std"]
